<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="R.string.toast_no_document_provider">No DocumentProvider available to handle permission request</string>
    <string name="playlist_save_failed">Couldn\'t save playlist</string>
    <string name="playlist_saved">Playlist saved to <xliff:g id="path">%s</xliff:g></string>
    <string name="blacklist_deleted">Blacklist deleted</string>
    <string name="whitelist_deleted">Whitelist deleted</string>
    <string name="delete_folder_failed">Error deleting folder.\n\nThis folder might be write protected.</string>
    <string name="delete_file_failed">Error deleting file.\n\nThis file might be write protected.</string>
    <string name="rename_folder_failed">Error renaming folder.\n\nThis folder might be write protected, or a folder with the same name already exists.</string>
    <string name="rename_file_failed">Error renaming file.\n\nThis file might be write protected, or a file with the same name already exists.</string>
    <string name="shuffle_on_notif">Shuffle on</string>
    <string name="shuffle_off_notif">Shuffle off</string>
    <string name="repeat_off_notif">Repeat off</string>
    <string name="repeat_current_notif">Repeat current song</string>
    <string name="repeat_all_notif">Repeat all songs</string>
    <string name="ringtone_menu">Set as ringtone</string>
    <string name="ringtone_set_new">Ringtone set.</string>
    <string name="ringtone_set_failed">Couldn\'t set ringtone</string>
    <plurals name="NNNtrackstoplaylist"> 
         
        <item quantity="one">1 song added to playlist.</item> 
         
        <item quantity="other"><xliff:g example="27" id="number">%d</xliff:g> songs added to playlist.</item> 
    </plurals>
    <string name="emptyplaylist">Selected playlist is empty.</string>
    <string name="initial_dir_set_message">\u0020set as initial directory</string>
    <string name="playlist_deleted_message">Playlist deleted.</string>
    <string name="playlist_renamed_message">Playlist renamed.</string>
    <plurals name="NNNtrackstoqueue"> 
         
        <item quantity="one">1 song added to queue.</item> 
         
        <item quantity="other"> 
            <xliff:g example="27" id="number">%d</xliff:g> 
            songs added to queue. 
        </item> 
    </plurals>
    <string name="song_to_favourites"><xliff:g id="song_name">%s</xliff:g> added to favorites.</string>
    <string name="song_removed_from_favourites"><xliff:g id="song_name">%s</xliff:g> removed from favorites.</string>
    <string name="restart_button">Restart now</string>
    <string name="color_pick">Pick a Color</string>
    <string name="share_failed">Sorry, this file couldn\'t be shared</string>
    <string name="share_dialog_title">What do you want to share?</string>
    <string name="share_option_song_info">Now playing info</string>
    <string name="share_option_audio_file">The audio file</string>
    <string name="share_via">Share song via:</string>
    <string name="saving_playlist">Saving playlist</string>
    <string name="gathering_songs">Gathering songs…</string>
    <string name="get_pro_title">Upgrade to Shuttle+</string>
    <string name="get_pro_message">If you like Shuttle, please consider upgrading. 
        \n\nFeatures: 
        \n• Tons of extra themes 
        \n• Tag editing 
        \n• Folder browsing 
        \n• ChromeCast Support\n 
        \nIt also helps to promote further development.</string>
    <string name="upgraded_title">Thank You</string>
    <string name="upgraded_message">You have successfully upgraded to Shuttle+. Thank you for your support. 
        \n\nPlease restart the app to ensure all features are enabled</string>
    <string name="upgrade_dialog_message"> 
        • ChromeCast support 
        \n• Extra themes 
        \n• Tag editing 
        \n• Folder browsing 
        \n• Support development ❤️</string>
    <string name="export_playlist">Export</string>
    <string name="play_selection">Play</string>
    <string name="menu_add_to">Add to…</string>
    <string name="menu_playlist">Playlist</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_album_shuffle">Album shuffle</string>
    <string name="play_next">Play next</string>
    <string name="clear_playlist_menu">Clear</string>
    <string name="edit_playlist_menu">Edit</string>
    <string name="rename_playlist_menu">Rename</string>
    <string name="delete_item">Delete</string>
    <string name="go_to">Go to…</string>
    <string name="share">Share</string>
    <string name="pref_category_navigation">Navigation</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_title_choose_tabs">Choose Tab Items</string>
    <string name="pref_summary_choose_tabs">Choose &amp; rearrange categories displayed as tabs at the top of the screen</string>
    <string name="pref_title_theme_pick_color">Primary Color</string>
    <string name="pref_summary_theme_pick_color">Choose the primary color for your theme</string>
    <string name="pref_title_theme_pick_accent_color">Accent Color</string>
    <string name="pref_summary_theme_pick_accent_color">Choose the accent color for your theme</string>
    <string name="pref_title_tinted_nav">Use Tinted Navigation Bar</string>
    <string name="pref_summary_tinted_nav">Enable/disable the navigation bar tint</string>
    <string name="pref_string_title_themes">Themes</string>
    <string name="pref_title_base_theme">Base Theme</string>
    <string name="pref_summary_base_theme">Choose your base theme (light or dark)</string>
    <string name="pref_group_palette">Palette</string>
    <string name="pref_title_palette">Use Colors from Artwork</string>
    <string name="pref_summary_palette">If enabled, Shuttle will detect the most prominent color in your artwork, and use that as the \'primary color\' throughout the app</string>
    <string name="pref_title_palette_now_playing">Only on \'Now Playing\' Screen</string>
    <string name="pref_title_view_blacklist">View/Edit Blacklist</string>
    <string name="pref_title_view_whitelist">View/Edit Whitelist</string>
    <string name="pref_title_crop_album_art">Crop Album Art</string>
    <string name="pref_summary_crop_album_art">Crops album art to take up all of the available space in the \'now playing\' screen</string>
    <string name="pref_title_artwork_queue">Show Artwork in \'Up Next\'</string>
    <string name="pref_title_prefer_embedded_art">Prefer embedded artwork</string>
    <string name="pref_summary_prefer_embedded_art">Check this box if you\'d prefer Shuttle to look for artwork embedded within your music files, before searching in your music directories</string>
    <string name="pref_title_ignore_embedded_art">Ignore embedded artwork</string>
    <string name="pref_summary_ignore_embedded_art">Don\'t search for artwork embedded in your music files</string>
    <string name="pref_title_ignore_mediastore_art">Ignore Media Store artwork</string>
    <string name="pref_summary_ignore_mediastore_art">The Android Media Store finds your embedded artwork, and seems to store it at a low resolution. Toggle this to bypass the MediaStore (slightly slower artwork loading)</string>
    <string name="pref_title_ignore_folder_art">Ignore folder artwork</string>
    <string name="pref_summary_ignore_folder_art">Don\'t search for artwork stored in your music directories</string>
    <string name="pref_string_title_artwork">Artwork</string>
    <string name="pref_title_download_artwork">Download Artwork</string>
    <string name="pref_summary_download_artwork">Download missing artist and album images</string>
    <string name="pref_title_delete_artwork">Delete Artwork</string>
    <string name="pref_summary_delete_artwork">Delete artist and album images from the device</string>
    <string name="pref_title_download_artwork_auto">Download Artwork Automatically</string>
    <string name="pref_summary_download_artwork_auto">Download missing artist and album images automatically</string>
    <string name="pref_title_download_wifi_only">Download Via Wi-Fi only</string>
    <string name="pref_summary_download_wifi_only">Artist and album images will only be downloaded if a Wi-Fi connection is available</string>
    <string name="pref_title_placeholders">Use Gmail Style Placeholders</string>
    <string name="pref_summary_placeholders">Displays \'Gmail\' style placeholders by default. 
        If unchecked, the Shuttle icon will be used as a placeholder instead</string>
    <string name="pref_title_lockscreen">Enable Lockscreen Artwork</string>
    <string name="pref_summary_lockscreen">Enables/disables the artwork on the lockscreen</string>
    <string name="pref_title_screen_on">Keep Screen On</string>
    <string name="pref_summary_screen_on">Stops the screen from dimming</string>
    <string name="pref_title_default_page">Default Page</string>
    <string name="pref_summary_default_page">Choose which page to display by default</string>
    <string name="pref_title_changelog">Changelog</string>
    <string name="pref_title_support">Support</string>
    <string name="pref_title_display_remaining_time">Show remaining time</string>
    <string name="pref_summary_display_remaining_time">Show remaining time instead of duration on the \'now playing\' screen</string>
    <string name="pref_title_version">Version</string>
    <string name="pref_title_faq">FAQ</string>
    <string name="pref_summary_faq">Have a question? Need help? Click here to view the FAQ @ www.shuttlemusicplayer.com</string>
    <string name="pref_title_community">Get Help</string>
    <string name="pref_summary_community">There is a very active community of Shuttle users on Discord. If you have questions or need help, this is the best place to go.</string>
    <string name="pref_title_rate">Say Thanks</string>
    <string name="pref_summary_rate">If you like Shuttle, please consider leaving a review.</string>
    <string name="pref_title_ignore_duplicates">Ignore playlist duplicates</string>
    <string name="pref_summary_ignore_duplicates">Don\'t search for and offer to skip duplicates when adding songs to a playlist</string>
    <string name="select_default_page">Select Default Page</string>
    <string name="whitelist_title">Whitelist</string>
    <string name="blacklist_title">Blacklist</string>
    <string name="blacklist_description">Songs can be added to the blacklist by pressing the overflow (3 vertical dots) from a particular song, and selecting \'blacklist\'.</string>
    <string name="whitelist_description">Songs can be added to the whitelist by pressing the settings button from the folder-browser, selecting \'whitelist\', then choosing the folders you wish to include in the whitelist.</string>
    <string name="info">Biography</string>
    <string name="edit_tags">Edit tags</string>
    <string name="rename">Rename</string>
    <string name="scan_file">Scan</string>
    <string name="tracks_title">Songs</string>
    <string name="artist_title">Artist</string>
    <string name="album_title">Album</string>
    <string name="genre_title">Genre</string>
    <string name="sort_default">Default</string>
    <string name="sort_ascending">Ascending</string>
    <string name="sort_album_name">Album Name</string>
    <string name="sort_song_name">Song Name</string>
    <string name="sort_song_year">Song Year</string>
    <string name="sort_song_duration">Song Duration</string>
    <string name="sort_song_track_number">Track #</string>
    <string name="sort_song_date_added">Date Added</string>
    <string name="song_info">Song info</string>
    <string name="pref_summary_restore_purchases">If you\'ve already upgraded Shuttle, but it\'s still showing up as the free version, press this.</string>
    <string name="pref_title_restore_purchases">Restore Purchases</string>
    <string name="artwork_edit">Choose artwork</string>
</resources>