<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->

<android.support.v7.preference.PreferenceScreen <!-- NOSONAR -->
    xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->

    <android.support.v7.preference.PreferenceCategory <!-- NOSONAR -->
        android:title="@string/pref_string_title_artwork"> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_download_artwork" <!-- NOSONAR -->
            android:summary="@string/pref_summary_download_artwork" <!-- NOSONAR -->
            android:title="@string/pref_title_download_artwork"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_delete_artwork" <!-- NOSONAR -->
            android:summary="@string/pref_summary_delete_artwork" <!-- NOSONAR -->
            android:title="@string/pref_title_delete_artwork"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="true" <!-- NOSONAR -->
            android:key="pref_download_artwork_auto" <!-- NOSONAR -->
            android:summary="@string/pref_summary_download_artwork_auto" <!-- NOSONAR -->
            android:title="@string/pref_title_download_artwork_auto"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="true" <!-- NOSONAR -->
            android:key="pref_download_wifi_only" <!-- NOSONAR -->
            android:summary="@string/pref_summary_download_wifi_only" <!-- NOSONAR -->
            android:title="@string/pref_title_download_wifi_only"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="true" <!-- NOSONAR -->
            android:key="pref_artwork_queue" <!-- NOSONAR -->
            android:title="@string/pref_title_artwork_queue"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_crop_artwork" <!-- NOSONAR -->
            android:summary="@string/pref_summary_crop_album_art" <!-- NOSONAR -->
            android:title="@string/pref_title_crop_album_art"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_placeholders" <!-- NOSONAR -->
            android:summary="@string/pref_summary_placeholders" <!-- NOSONAR -->
            android:title="@string/pref_title_placeholders"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_prefer_embedded" <!-- NOSONAR -->
            android:summary="@string/pref_summary_prefer_embedded_art" <!-- NOSONAR -->
            android:title="@string/pref_title_prefer_embedded_art"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_ignore_embedded_artwork" <!-- NOSONAR -->
            android:summary="@string/pref_summary_ignore_embedded_art" <!-- NOSONAR -->
            android:title="@string/pref_title_ignore_embedded_art"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_ignore_mediastore_artwork" <!-- NOSONAR -->
            android:summary="@string/pref_summary_ignore_mediastore_art" <!-- NOSONAR -->
            android:title="@string/pref_title_ignore_mediastore_art"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_ignore_folder_artwork" <!-- NOSONAR -->
            android:summary="@string/pref_summary_ignore_folder_art" <!-- NOSONAR -->
            android:title="@string/pref_title_ignore_folder_art"/> <!-- NOSONAR -->

    </android.support.v7.preference.PreferenceCategory> <!-- NOSONAR -->

</android.support.v7.preference.PreferenceScreen> <!-- NOSONAR -->