<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->
<menu <!-- NOSONAR -->
    xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/playNext" <!-- NOSONAR -->
        android:title="@string/play_next"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:title="@string/menu_add_to"> <!-- NOSONAR -->
        <menu> <!-- NOSONAR -->
            <item <!-- NOSONAR -->
                android:id="@+id/addToPlaylist" <!-- NOSONAR -->
                android:title="@string/menu_playlist"> <!-- NOSONAR -->
                <menu/> <!-- NOSONAR -->
            </item> <!-- NOSONAR -->

            <item <!-- NOSONAR -->
                android:id="@+id/addToQueue" <!-- NOSONAR -->
                android:title="@string/menu_queue"/> <!-- NOSONAR -->
        </menu> <!-- NOSONAR -->
    </item> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/editTags" <!-- NOSONAR -->
        android:title="@string/edit_tags"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/share" <!-- NOSONAR -->
        android:title="@string/share"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/ringtone" <!-- NOSONAR -->
        android:title="@string/ringtone_menu"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/songInfo" <!-- NOSONAR -->
        android:title="@string/song_info"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/blacklist" <!-- NOSONAR -->
        android:title="@string/blacklist_title"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/delete" <!-- NOSONAR -->
        android:title="@string/delete_item"/> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:title="@string/go_to"> <!-- NOSONAR -->
        <menu> <!-- NOSONAR -->
            <item <!-- NOSONAR -->
                android:id="@+id/goToArtist" <!-- NOSONAR -->
                android:title="@string/artist_title"/> <!-- NOSONAR -->

            <item <!-- NOSONAR -->
                android:id="@+id/goToAlbum" <!-- NOSONAR -->
                android:title="@string/album_title"/> <!-- NOSONAR -->

            <item <!-- NOSONAR -->
                android:id="@+id/goToGenre" <!-- NOSONAR -->
                android:title="@string/genre_title"/> <!-- NOSONAR -->
        </menu> <!-- NOSONAR -->
    </item> <!-- NOSONAR -->

</menu> <!-- NOSONAR -->