<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->
<menu <!-- NOSONAR -->
    xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/play" <!-- NOSONAR -->
        android:title="@string/play_selection" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/playNext" <!-- NOSONAR -->
        android:title="@string/play_next" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/albumShuffle" <!-- NOSONAR -->
        android:title="@string/menu_album_shuffle" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:title="@string/menu_add_to"> <!-- NOSONAR -->
        <menu> <!-- NOSONAR -->
            <item <!-- NOSONAR -->
                android:id="@+id/addToPlaylist" <!-- NOSONAR -->
                android:title="@string/menu_playlist"> <!-- NOSONAR -->
                <menu /> <!-- NOSONAR -->
            </item> <!-- NOSONAR -->

            <item <!-- NOSONAR -->
                android:id="@+id/addToQueue" <!-- NOSONAR -->
                android:title="@string/menu_queue" /> <!-- NOSONAR -->
        </menu> <!-- NOSONAR -->
    </item> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/editTags" <!-- NOSONAR -->
        android:title="@string/edit_tags" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/info" <!-- NOSONAR -->
        android:title="@string/info" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/artwork" <!-- NOSONAR -->
        android:title="@string/artwork_edit" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/blacklist" <!-- NOSONAR -->
        android:title="@string/blacklist_title" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/delete" <!-- NOSONAR -->
        android:title="@string/delete_item" /> <!-- NOSONAR -->

</menu> <!-- NOSONAR -->
