<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->

<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->
    <android.support.v7.preference.PreferenceCategory <!-- NOSONAR -->
        android:key="support_group" <!-- NOSONAR -->
        android:title="@string/pref_title_support"> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_version" <!-- NOSONAR -->
            android:title="@string/pref_title_version"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_changelog" <!-- NOSONAR -->
            android:title="@string/pref_title_changelog"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_faq" <!-- NOSONAR -->
            android:summary="@string/pref_summary_faq" <!-- NOSONAR -->
            android:title="@string/pref_title_faq"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_help" <!-- NOSONAR -->
            android:summary="@string/pref_summary_community" <!-- NOSONAR -->
            android:title="@string/pref_title_community"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_rate" <!-- NOSONAR -->
            android:summary="@string/pref_summary_rate" <!-- NOSONAR -->
            android:title="@string/pref_title_rate"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_restore_purchases" <!-- NOSONAR -->
            android:summary="@string/pref_summary_restore_purchases" <!-- NOSONAR -->
            android:title="@string/pref_title_restore_purchases"/> <!-- NOSONAR -->

    </android.support.v7.preference.PreferenceCategory> <!-- NOSONAR -->
</android.support.v7.preference.PreferenceScreen> <!-- NOSONAR -->