<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->

<android.support.v7.preference.PreferenceScreen <!-- NOSONAR -->
    xmlns:android="http://schemas.android.com/apk/res/android" <!-- NOSONAR -->
    xmlns:app="http://schemas.android.com/apk/res-auto"> <!-- NOSONAR -->

    <android.support.v7.preference.PreferenceCategory <!-- NOSONAR -->
        android:title="@string/pref_string_title_themes"> <!-- NOSONAR -->

        <Preference <!-- NOSONAR -->
            android:defaultValue="0" <!-- NOSONAR -->
            android:key="pref_theme_base" <!-- NOSONAR -->
            android:summary="@string/pref_summary_base_theme" <!-- NOSONAR -->
            android:title="@string/pref_title_base_theme"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_theme_primary_color" <!-- NOSONAR -->
            android:summary="@string/pref_summary_theme_pick_color" <!-- NOSONAR -->
            android:title="@string/pref_title_theme_pick_color"/> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_theme_accent_color" <!-- NOSONAR -->
            android:summary="@string/pref_summary_theme_pick_accent_color" <!-- NOSONAR -->
            android:title="@string/pref_title_theme_pick_accent_color"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="false" <!-- NOSONAR -->
            android:key="pref_nav_bar" <!-- NOSONAR -->
            android:summary="@string/pref_summary_tinted_nav" <!-- NOSONAR -->
            android:title="@string/pref_title_tinted_nav" <!-- NOSONAR -->
            app:defaultValue="false"/> <!-- NOSONAR -->

    </android.support.v7.preference.PreferenceCategory> <!-- NOSONAR -->

    <android.support.v7.preference.PreferenceCategory <!-- NOSONAR -->
        android:title="@string/pref_group_palette"> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:defaultValue="true" <!-- NOSONAR -->
            android:key="pref_theme_use_palette" <!-- NOSONAR -->
            android:summary="@string/pref_summary_palette" <!-- NOSONAR -->
            android:title="@string/pref_title_palette"/> <!-- NOSONAR -->

        <android.support.v7.preference.SwitchPreferenceCompat <!-- NOSONAR -->
            android:dependency="pref_theme_use_palette" <!-- NOSONAR -->
            android:key="pref_theme_use_palette_now_playing" <!-- NOSONAR -->
            android:title="@string/pref_title_palette_now_playing"/> <!-- NOSONAR -->

    </android.support.v7.preference.PreferenceCategory> <!-- NOSONAR -->

</android.support.v7.preference.PreferenceScreen> <!-- NOSONAR -->