<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->
<menu <!-- NOSONAR -->
    xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/playPlaylist" <!-- NOSONAR -->
        android:title="@string/play_selection" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/playNext" <!-- NOSONAR -->
        android:title="@string/play_next" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/renamePlaylist" <!-- NOSONAR -->
        android:title="@string/rename_playlist_menu" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/editPlaylist" <!-- NOSONAR -->
        android:title="@string/edit_playlist_menu" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/exportPlaylist" <!-- NOSONAR -->
        android:title="@string/export_playlist" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/clearPlaylist" <!-- NOSONAR -->
        android:title="@string/clear_playlist_menu" /> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/deletePlaylist" <!-- NOSONAR -->
        android:title="@string/delete_item" /> <!-- NOSONAR -->

</menu> <!-- NOSONAR -->
