<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:enabled="false" <!-- NOSONAR -->
        android:title="@string/tracks_title"/> <!-- NOSONAR -->

    <group <!-- NOSONAR -->
        android:id="@+id/group_songs" <!-- NOSONAR -->
        android:checkableBehavior="single"> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_detail_default" <!-- NOSONAR -->
            android:title="@string/sort_default"/> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_name" <!-- NOSONAR -->
            android:title="@string/sort_song_name"/> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_track_number" <!-- NOSONAR -->
            android:title="@string/sort_song_track_number"/> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_duration" <!-- NOSONAR -->
            android:title="@string/sort_song_duration"/> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_year" <!-- NOSONAR -->
            android:title="@string/sort_song_year"/> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_date" <!-- NOSONAR -->
            android:title="@string/sort_song_date_added"/> <!-- NOSONAR -->
        <item <!-- NOSONAR -->
            android:id="@+id/sort_song_album_name" <!-- NOSONAR -->
            android:title="@string/sort_album_name"/> <!-- NOSONAR -->
    </group> <!-- NOSONAR -->

    <item <!-- NOSONAR -->
        android:id="@+id/sort_song_ascending" <!-- NOSONAR -->
        android:checkable="true" <!-- NOSONAR -->
        android:checked="true" <!-- NOSONAR -->
        android:title="@string/sort_ascending"/> <!-- NOSONAR -->

</menu> <!-- NOSONAR -->