<?xml version="1.0" encoding="utf-8"?> <!-- NOSONAR -->

<android.support.v7.preference.PreferenceScreen <!-- NOSONAR -->
    xmlns:android="http://schemas.android.com/apk/res/android"> <!-- NOSONAR -->

    <android.support.v7.preference.PreferenceCategory <!-- NOSONAR -->
        android:title="@string/blacklist_title"> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_blacklist_view" <!-- NOSONAR -->
            android:summary="@string/blacklist_description" <!-- NOSONAR -->
            android:title="@string/pref_title_view_blacklist"/> <!-- NOSONAR -->

    </android.support.v7.preference.PreferenceCategory> <!-- NOSONAR -->

    <android.support.v7.preference.PreferenceCategory <!-- NOSONAR -->
        android:title="@string/whitelist_title"> <!-- NOSONAR -->

        <android.support.v7.preference.Preference <!-- NOSONAR -->
            android:key="pref_whitelist_view" <!-- NOSONAR -->
            android:summary="@string/whitelist_description" <!-- NOSONAR -->
            android:title="@string/pref_title_view_whitelist"/> <!-- NOSONAR -->
    </android.support.v7.preference.PreferenceCategory> <!-- NOSONAR -->

</android.support.v7.preference.PreferenceScreen> <!-- NOSONAR -->